# connect4_rl

./: README.md  TRAINING_MATH.md  dqn_impl.py  dqn_replay_buffer_target_network.py  main.py  main_training_loop.py  pyproject.toml  requirements.txt  self_play_gui.py  training_data.pkl
benchmarks/: checkpoint_iter_0060_20260519_061216.json  checkpoint_iter_0080_20260519_062544.json  checkpoint_iter_0100_20260519_063927.json  checkpoint_iter_0120_20260519_065315.json  checkpoint_iter_0120_20260519_065326.json  checkpoint_iter_0500_20250712_162910.json
checkpoints/: checkpoint_iter_0060_20260519_061216.pt  checkpoint_iter_0080_20260519_062544.pt  checkpoint_iter_0100_20260519_063927.pt  checkpoint_iter_0120_20260519_065315.pt  checkpoint_iter_0120_20260519_065326.pt  checkpoint_iter_0300_20250712_161523.pt  checkpoint_iter_0350_20250712_161855.pt  checkpoint_iter_0400_20250712_162220.pt  checkpoint_iter_0450_20250712_162544.pt  checkpoint_iter_0500_20250712_162910.pt
game_engine_components/: __init__.py  check_winner.py  connect4_env.py  copy_game.py  get_state_tensor.py  get_valid_moves.py  intialize_board.py  is_draw.py  is_terminal.py  make_move.py  reset_game.py
mcts_components/: backpropogate_value.py  calculate_ucb.py  create_node.py  evaluate_board.py  expand_node.py  get_action_visits.py  run_simulation.py  select_child.py  test.py
neural_network_components/: calculate_loss.py  forward_pass.py  load_model.py  neural_network.py  policy_head.py  save_model.py  shared_featue.py  shared_feature.py  test.py  update_weights.py  upgrade_wights.py  value_head.py
(+22 files in other folders)
