[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-rl"
version = "0.1.0"
description = "AlphaZero-style Connect4 training pipeline with self-play, MCTS, terminal UI, and optional Hugging Face checkpoint sync."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.2",
    "huggingface_hub>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "agent_interface_components",
    "game_engine_components",
    "mcts_components",
    "neural_network_components",
    "training_data_components",
    "training_loop_components",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
